Fixing the animation on calling button
The animation on the answer button was not visible for incoming calls.

--- a/javascript/samples/common/style/demo-style.css
+++ b/javascript/samples/common/style/demo-style.css
@@ -264,6 +264,7 @@ body {
   font-size: 10px;
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  transform: translateY(-2px);
 }
 
 .demo-button:hover,
